--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,12 @@ Changelog = "https://github.com/FongAnthonyM/hdf5objects/releases"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-baseobject = "^1.5.1"
-classversioning = "^0.4.0"
+baseobjects = "^1.5.2"
+classversioning = "^0.4.1"
 dspobjects = "^0.1.0"
-framestructure = "^0.2.1"
+framestructure = "^0.3.0"
 h5py = "^3.5.0"
-numpy = "^1.21.3"
-multipledispatch = "^0.6.0"
+numpy = "^1.21.1"
 pytz = "^2021.1"
 tzlocal = "^3.0"
 bidict = "^0.21.3"
