--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ dspobjects = "^0.2.0"
 framestructure = "^0.4.0"
 h5py = "^3.5.0"
 numpy = "^1.21.1"
-tzlocal = "^3.0"
 bidict = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
@@ -37,7 +36,7 @@ sphinx = "^4.2.0"
 sphinx-autobuild = "^2021.3.14"
 pre-commit = "^2.15.0"
 flake8 = "^4.0.1"
-black = "^21.10b0"
+black = "^23.3.0"
 flake8-bandit = "^2.1.2"
 flake8-bugbear = "^21.9.2"
 flake8-docstrings = "^1.6.0"
