--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,9 @@ source = ["hdf5objects"]
 show_missing = true
 fail_under = 100
 
+[tool.black]
+line-length = 120
+
 [tool.mypy]
 strict = true
 warn_unreachable = true
