--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,13 @@ classifiers = [
 Changelog = "https://github.com/FongAnthonyM/hdf5objects/releases"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10"
 baseobjects = "^1.8.0"
 classversioning = "^0.6.0"
 dspobjects = "^0.2.0"
-framestructure = "^0.4.0"
+proxyarrays = "^0.5.1"
 h5py = "^3.5.0"
-numpy = "^1.21.1"
+numpy = "^1.25.1"
 bidict = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
