--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ Changelog = "https://github.com/FongAnthonyM/hdf5objects/releases"
 
 [tool.poetry.dependencies]
 python = ">=3.10"
-baseobjects = "^1.8.0"
-classversioning = "^0.6.0"
-dspobjects = "^0.2.0"
-proxyarrays = "^0.5.1"
-h5py = "^3.5.0"
-numpy = "^1.25.1"
-bidict = "^0.22.0"
+baseobjects = ">=1.8.0"
+classversioning = ">=0.7.0"
+dspobjects = ">=0.2.0"
+proxyarrays = ">=0.5.1"
+h5py = ">=3.5.0"
+numpy = ">=1.25.1"
+bidict = ">=0.22.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
